--- a/Home.html
+++ b/Home.html
@@ -979,7 +979,7 @@
             </div>
         </div>
     </footer>
-    <a href="https://wa.me/2349164720787?text=Hello%20can%20I%20get%20more%20info%20on%20how%20animo%20works%20%3F%3F" class="powered-by-btn" target="_blank" title="Chat Admin">
+    <a href="https://t.me/coachella08?text=Hello%20admin%2C%20can%20I%20get%20more%20info%20on%20how%20animo%20works%3F" class="powered-by-btn" target="_blank" title="Chat Admin">
     <small>Need Help?<br><strong>Message admin</strong></small>
   </a>
 
