Update footer links to new Telegram URLs

--- a/Home.html
+++ b/Home.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -973,13 +972,13 @@
             </div>
             <div class="footer-bottom">
                 <div class="built" style="color: white; font-weight: 500;">
-                    Built By <a href="https://t.me/clicksensewithDivineTv" style="color: #B8E68C; text-decoration: none;">RaphXsoln</a>
+                    Built By <a href="https://t.me/clicksensewithDivineTv/518" style="color: #B8E68C; text-decoration: none;">RaphXsoln</a>
                 </div>
                 &copy; 2025 Animo. All Rights Reserved.
             </div>
         </div>
     </footer>
-    <a href="https://t.me/coachella08?text=Hello%20admin%2C%20can%20I%20get%20more%20info%20on%20how%20animo%20works%3F" class="powered-by-btn" target="_blank" title="Chat Admin">
+    <a href="https://t.me/clicksensewithDivineTv/518" class="powered-by-btn" target="_blank" title="Chat Admin">
     <small>Need Help?<br><strong>Message admin</strong></small>
   </a>
 
